# resume-reviewer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: design-spec.md  thoughts.md
python/: .env.example  README.md  pyproject.toml  requirements.txt
python/app/: __init__.py  config.py  dependencies.py  exceptions.py  feature_flags.py  main.py
python/app/analysis/: __init__.py  analyzer.py  llm_analyzer.py  llm_client.py  resume_parser.py  rule_based.py  scoring_engine.py
python/app/extraction/: __init__.py  pdf_extractor.py
python/app/models/: __init__.py  review.py
python/app/routes/: api.py  feature_flags.py  review.py
python/app/services/: __init__.py  review_service.py
python/data/: skills_dictionary.txt
python/static/: flags.js  style.css
python/templates/: error.html  review.html  review_result.html
python/tests/: conftest.py  test_api.py  test_feature_flags.py  test_llm_analyzer.py  test_pdf_extractor.py  test_resume_parser.py  test_scoring_engine.py
python/tests/fixtures/: sample_resume.txt
